--- a/CountDominance_bibli.bib
+++ b/CountDominance_bibli.bib
@@ -33,7 +33,7 @@
 
 @article{luchman2020relative,
 	title={Relative importance analysis with multivariate models: Shifting the focus from independent variables to parameter estimates},
-	author={Luchman, JN and Lei, X and Kaplan, SA},
+	author={Luchman, Joseph N and Lei, X and Kaplan, Seth A},
 	journal={Journal of Applied Structural Equation Modeling},
 	volume={4},
 	number={2},
@@ -58,7 +58,7 @@
 	journal={Psychological Bulletin},
 	volume={114},
 	number={3},
-	pages={542},
+	pages={542--551},
 	year={1993},
 	publisher={American Psychological Association}
 }
@@ -146,7 +146,7 @@
 	journal={Psychological Methods},
 	volume={8},
 	number={2},
-	pages={129},
+	pages={129--148},
 	year={2003},
 	publisher={American Psychological Association}
 }
@@ -186,20 +186,9 @@
 	journal={Journal of Applied Psychology},
 	volume={104},
 	number={4},
-	pages={593},
+	pages={593--602},
 	year={2019},
 	publisher={American Psychological Association}
-}
-
-@article{hodges1960poisson,
-	title={The Poisson approximation to the Poisson binomial distribution},
-	author={Hodges, Joseph L and Le Cam, Lucien},
-	journal={The Annals of Mathematical Statistics},
-	volume={31},
-	number={3},
-	pages={737--740},
-	year={1960},
-	publisher={JSTOR}
 }
 
 @article{rotolo2013does,
@@ -230,7 +219,7 @@
 	journal={Psychological Bulletin},
 	volume={52},
 	number={4},
-	pages={281},
+	pages={281--302},
 	year={1955},
 	publisher={American Psychological Association}
 }
