--- a/Cover Letter.tex
+++ b/Cover Letter.tex
@@ -3,30 +3,29 @@
 \usepackage[T1]{fontenc}
 \begin{document}
 	
-	To: Drs. Tine K{\"o}hler and Lisa Lambert, Co-editors
+	To: Drs. Eden King and Stephen Rogelberg, Co-editors
 	
-	\emph{Organizational Research Methods}
+	\emph{Journal of Business and Psychology}
 	
-	June 4, 2023
+	September 16, 2023
 	
-	Dear Drs. K{\"o}hler and Lambert,
+	Dear Drs. King and Rogelberg,
 	
-	I have submitted a manuscript titled “Relative importance analysis for count regression models” to the \emph{Organizational Research Methods} manuscript portal and would like to request its consideration for publication in the journal as an short methodological report article format publication.
+	I have re-submitted a manuscript titled “Relative importance analysis for count regression models” to the \emph{Journal of Business and Psychology} manuscript portal and would like to request its consideration for publication. This manuscript is a new submission of the previously submitted manuscript JOBU-D-23-00902 that was returned to me.
 	
 	This manuscript describes an extension of relative importance analysis to count regression models such as the Poisson and negative Binomial regression models. 
-	In this work, I review the dominance analysis methodology for determining relative importance, discuss a recommended model fit metric to use for the dominance analysis of count models, and review the concept of differential exposure in count regression including its effects on estimates and how to correct for it during dominance analysis.
+	In this work, I review the dominance analysis methodology for determining relative importance and discuss a recommended model fit metric to use for the dominance analysis of count models.
 	
 	This manuscript also includes several data analytic examples and an extensive HTML formatted markdown document that interested users can review to follow along with and emulate this method as well as to review the methodology used to create the data. 
 	This work is discussed as an extension of the work of Blevins et al. (2015; \emph{Organizational Research Methods}) who review count data models, how to choose which model, and discuss recommended practice in estimating count regressions. 
 	
-	I can confirm that this manuscript is my work, no one else has the rights to it, as well as that it is not under consideration for publication elsewhere, has not appeared, and will not appear, in any other source in whole or substantial part. 
-	Moreover, this manuscript has not been previously submitted to any other source and has no submission history before this version of the manuscript.  
+	I can confirm that this manuscript is my work, no one else has the rights to it, as well as that it is not under consideration for publication elsewhere, has not appeared, and will not appear, in any other source in whole or substantial part.  
 	There are no copyrighted materials included in this paper that would require the need to obtain permissions for use.
 	
 	I look forward to receiving feedback regarding this manuscript. 
 	If you have any questions regarding this paper or would like further clarification, I encourage you to contact me using email at: jluchman@forsmarsh.com or jluchman@gmail.com. 
-	Please note that I have prepared the manuscript using the Sage \LaTeX \ template and have tried to alter the submission to meet \emph{ORM}'s submission guidelines. 
-	I am happy to further alter the manuscript to ensure it meets the requirements of the journal prior to review.
+	Please note that I have prepared the manuscript using the \texttt{apa7} \LaTeX \ template and have tried to alter the submission to meet \emph{JBP}'s submission guidelines in particular attempting to correct default rendering (e.g., colored hyperlinks) that I was asked to remove to ensure the document's format is not distracting for review.
+	As, before, I am happy to further alter the manuscript to ensure it meets the requirements of the journal prior to review.
 	
 	Cordially,
 	
