--- a/T&PD_count_domin.Rmd
+++ b/T&PD_count_domin.Rmd
@@ -424,242 +424,6 @@ Data_Frame %>%
   gtsave(filename = "descrips_initial.tex", path = "./includes/")
 ```
 
-## Generate Differential Exposure Contaminated Dependent Variables
-
-The two differential exposure contaminated variables, sport jacket production during religious holidays ($SJ_{RH}$) and sport jacked production during voluntary holidays ($SJ_{VH}$) were generated in a way similar to that of the Poisson and negative Binomial variables above.
-
-### Random Differential Exposure
-
-The $SJ_{RH}$ DV was generated from the $GP$ variable like $SJ$ above but was based on repeated Binomial trials as opposed to the Poisson distribution directly. As is discussed in the manuscript, repeated trials from a binomial distribution are known to be Poisson distributed with a rate/mean parameter that can be derived as $np = \lambda$ where In this case the $n$ is the number of trials and $p$ is the probability of the event occurring.
-
-The number of Binomial trials are then used as the metric determining each observation's differential exposure to the probability or the count generating process. These number of Binomial trials representing number of days working during the two week period with religious holidays ($RH$) were based on a random draw from a uniform distribution for each observation adhering to the constraint that the value for each observation was an integer ranging from 1 to 10 working days.
-
-The probability value chosen for the Binomial distribution was .1. This value was chosen as it is the value that would obtain the mean of $SJ$ given identical exposure for all tailoring shops assuming they worked each working day (i.e., $10*.1 = 1$).
-
-The code block below generates both $RH$ and $SJ_{RH}$. Descriptive statistics for both are reported.
-
-```{r diff-exp-rnd-gen}
-Data_Frame %<>%
-  mutate(
-    RH = sample(1:10, total_n, replace = TRUE),
-    SJ_RH = 
-      GP %>% pnorm(log.p = TRUE) %>%
-      qbinom(RH, .1, log.p = TRUE)
-  )
-
-Data_Frame %>%
-  summarise(across(c(SJ_RH, RH), mean)) %>% 
-  pivot_longer(everything(), 
-               names_to = "Variable", values_to = "Mean") %>% 
-  left_join(
-    Data_Frame %>%
-      summarise(across(c(SJ_RH, RH), sd)) %>% 
-      pivot_longer(everything(), 
-                   names_to = "Variable", values_to = "Standard Deviation"),
-    by = "Variable"
-  ) %>%
-  left_join(
-    Data_Frame %>% 
-      cor %>% 
-      as_tibble(rownames = "Variable") %>%
-      filter(Variable %in% c("SJ_RH", "RH")) %>%
-      select(ER, AS, SL, WE, Variable),
-    by = "Variable"
-  ) %>%
-  gt() %>%
-  tab_header("Table S12: Random Differential Exposure Poisson Dependent Variable Descriptive Statistics") %>%
-  fmt_number(columns = 2:7, decimals = 4) %>%
-  tab_spanner(columns = c(ER, AS, SL, WE), label = "Correlations") %>%
-  tab_style(
-    style = cell_borders(sides = "right"),
-    locations = cells_body(columns = "Standard Deviation")
-  )
-```
-
-A graph of the random differential exposure variable is reported below.
-
-```{r rnd-exps-gph}
-Data_Frame %>%
-  select(RH) %>%
-  mutate(RH = as_factor(RH)) %>%
-  ggplot(aes(x = RH)) +
-  stat_count() +
-  ggtitle("Figure Sd: Distribution of the Random Differential Exposure Variable") +
-  theme_light()
-```
-
-In addition, a graphic depicting the random differential exposure contaminated Poisson distributed variable is depicted.
-
-```{r diff-exp-rnd-gph}
-Data_Frame %>%
-  select(SJ_RH) %>%
-  ggplot(aes(x = SJ_RH)) +
-  stat_count() +
-  ggtitle("Figure Se: Distribution of the Random Differential Exposure\nPoisson Dependent Variable") +
-  theme_light()
-```
-
-Finally, a graphic that depicts the differential exposure contaminated DV across levels of differential exposure.
-
-```{r diff-exp-rnd-xtab}
-Data_Frame %>%
-  select(SJ_RH, RH) %>%
-  ggplot(aes(x = SJ_RH)) +
-  stat_count() +
-  ggtitle("Figure Sf: Distribution of the Random Differential Exposure\nPoisson Dependent Variable Across Levels of Differential Exposure") +
-  theme_light() + 
-  facet_wrap(vars(RH), nrow = 2)
-```
-
-### Correlated Differential Exposure Depedent Variable
-
-The $SJ_{VH}$ DV, like $SJ_{RH}$, was generated from the $GP$ variable as based on repeated Binomial trials. $SJ_{VH}$ differed from $SJ_{RH}$ only in how the differential exposure variable was constructed.
-
-$SJ_{VH}$'s differential exposure variable was generated in a manner more similar to $GP$ itself. In fact, the number of Binomial trials representing number of days working during the two week period with voluntary holidays ($VH$) used the higher-order population coefficient values used to generate $GP$ but multiplied by -1. The -1 transformed higher-order population coefficient values are then used as the means of four draws from a Normal distribution each with a standard deviation of .05 following the approach applied to obtaining the sampled population coefficient values for $GP$.
-
-The code block below implements the sampling and reports the sampled population coefficient values that will be used for $VH$.
-
-```{r diff-exp-corr-coef}
-Coefficient_Vector_Diff_Exp <- 
-  rnorm(4, Coefficient_Vector*-1, .05)
-
-names(Coefficient_Vector_Diff_Exp) <- namelist
-
-Coefficient_Vector_Diff_Exp %>%
-  data.frame(name = namelist, value = .) %>%
-  pivot_wider(id_cols = everything()) %>%
-  gt() %>%
-  tab_header("Table S13: Sampled Population Coefficient Values for Differential Exposure") %>%
-  fmt_number(columns = 1:4, decimals = 4)
-```
-
-A Normally distributed initial $VH$ value is constructed in the same way as $GP$ above and is translated into a Uniform distributed variable ranging from 0 to 10. These uniform distributed values are not integer valued and are coerced to integers. 
-
-The Uniform, integer-valued $VH$ is then used in the same way as $RH$ above as a differential exposure factor for the Binomial trials.
-
-The code block below generates $VH$ and $SJ_{VH}$ and reports on descriptives.
-
-```{r diff-exp-corr-gen}
-Data_Frame %<>%
-  mutate(
-    VH =
-      ER*Coefficient_Vector_Diff_Exp[["ER"]] + AS*Coefficient_Vector_Diff_Exp[["AS"]] + 
-      SL*Coefficient_Vector_Diff_Exp[["SL"]] + WE*Coefficient_Vector_Diff_Exp[["WE"]],
-    VH = VH + rnorm(total_n, 0, sqrt(1 - var(VH))),
-    VH = VH %>% pnorm(log.p = TRUE) %>% 
-      qunif(0, 10, log.p = TRUE) %>% ceiling(),
-    SJ_VH = GP %>% pnorm(log.p = TRUE) %>% 
-      qbinom(VH, .1, log.p = TRUE)
-  )
-
-Data_Frame %>%
-  summarise(across(c(SJ_VH, VH), mean)) %>% 
-  pivot_longer(everything(), 
-               names_to = "Variable", values_to = "Mean") %>% 
-  left_join(
-    Data_Frame %>%
-      summarise(across(c(SJ_VH, VH), sd)) %>% 
-      pivot_longer(everything(), 
-                   names_to = "Variable", values_to = "Standard Deviation"),
-    by = "Variable"
-  ) %>%
-  left_join(
-    Data_Frame %>% 
-      cor %>% 
-      as_tibble(rownames = "Variable") %>%
-      filter(Variable %in% c("SJ_VH", "VH")) %>%
-      select(ER, AS, SL, WE, Variable),
-    by = "Variable"
-  ) %>%
-  gt() %>%
-  tab_header("Table S14: Correlated Differential Exposure Poisson Dependent Variable Descriptive Statistics") %>%
-  fmt_number(columns = 2:7, decimals = 4) %>%
-  tab_spanner(columns = c(ER, AS, SL, WE), label = "Correlations") %>%
-  tab_style(
-    style = cell_borders(sides = "right"),
-    locations = cells_body(columns = "Standard Deviation")
-  )
-```
-
-Below a graph of the correlated differential exposure variable is provided.
-
-```{r corr-exps-gph}
-Data_Frame %>%
-  select(VH) %>%
-  mutate(VH = as_factor(VH)) %>%
-  ggplot(aes(x = VH)) +
-  stat_count() +
-  ggtitle("Figure Sg: Distribution of the Correlated Differential Exposure Variable") +
-  theme_light()
-```
-
-In addition, a graphic depicting the correlated differential exposure contaminated Poisson distributed variable is depicted.
-
-```{r diff-exp-corr-gph}
-Data_Frame %>%
-  select(SJ_VH) %>%
-  ggplot(aes(x = SJ_VH)) +
-  stat_count() +
-  ggtitle("Figure Sh: Distribution of the Correlated Differential Exposure\nPoisson Dependent Variable") +
-  theme_light()
-```
-
-Finally, a graphic that depicts the differential exposure contaminated DV across levels of differential exposure.
-
-```{r diff-exp-corr-xtab}
-Data_Frame %>%
-  select(SJ_VH, VH) %>%
-  ggplot(aes(x = SJ_VH)) +
-  stat_count() +
-  ggtitle("Figure Si: Distribution of the Correlated Differential Exposure\nPoisson Dependent Variable Across Levels of Differential Exposure") +
-  theme_light() + 
-  facet_wrap(vars(VH), nrow = 2)
-```
-
-## Report Differential Exposure Contaminated Data Descriptives
-
-This section produces Table 8 in the manuscript including the descriptive statistics for both new DVs and their correlations with the IVs.
-
-```{r display-exposure-descriptives}
-Data_Frame %>%
-  summarise(across(c(SJ_RH, SJ_VH), mean)) %>%
-  pivot_longer(everything(), names_to = "Variable", values_to = "Mean") %>%
-  left_join(
-    Data_Frame %>%
-      summarise(across(c(SJ_RH, SJ_VH), sd)) %>%
-      pivot_longer(everything(), names_to = "Variable", 
-                   values_to = "Standard Deviation"),
-    by = "Variable"
-  ) %>%
-  left_join(
-    Data_Frame %>% 
-      cor %>% 
-      as_tibble(rownames = "Variable"),
-    by = "Variable"
-  ) %>%
-  filter(Variable %in% c("SJ_RH", "SJ_VH")) %>%
-  select(Variable, Mean, `Standard Deviation`, ER, AS, SL, WE) %>%
-  gt() %>%
-  tab_header("Table 8: Descriptive Statistics with Differential Exposure") %>%
-  fmt_number(columns = 2:7, decimals = 4) %>%
-  tab_spanner(columns = c(ER, AS, SL, WE), label = "Correlations") %>%
-  tab_style(
-    style = cell_borders(sides = "right"),
-    locations = cells_body(columns = "Standard Deviation")
-  ) %T>%
-  print %>%
-  gtsave(filename = "descrips_exposure.tex", path = "./includes/")
-```
-
-```{r save-data, results='hide', include=FALSE}
-saveRDS(Data_Frame, "./Data_Results/DF.rds")
-```
-
-```{r load-data, results='hide', include=FALSE}
-Data_Frame <- 
-  readRDS("./Data_Results/DF.rds")
-```
-
 # Primary Modeling
 
 This section describes the model estimation and dominance analysis of the primary analysis models involving the primary $SJ$ and the unreported $OC$ DVs.
@@ -722,7 +486,7 @@ map(c("ER", "AS", "SL", "WE"),
   geom_line() + scale_color_viridis_d() + theme_light() + 
   ylab("Predicted Counts") + xlab("Values of Tailoring Characteristic") + 
   labs(color = "Tailoring\nCharacteristic") + 
-  ggtitle("Figure Sj: Marginal Effects of the Sport Jacket\nProduction Model")
+  ggtitle("Figure Sd: Marginal Effects of the Sport Jacket\nProduction Model")
 ```
 
 ### Obtain All Submodels' R-squares
@@ -793,7 +557,7 @@ SJ_pois_DA %>%
             by = "Variable") %>%
   set_names(c("Variable", "General Dominance", "Standardized")) %>%
   gt(rowname_col = "Variable") %>%
-  tab_header("Table S15: Poisson Model General Dominance Statistics") %>%
+  tab_header("Table S12: Poisson Model General Dominance Statistics") %>%
   fmt_number(columns = 2:3, decimals = 4) %>%
   tab_source_note(str_c("Overall Deviance R-square is ", 
                         SJ_pois_reg %>% r2_kullback() %>% 
@@ -804,7 +568,7 @@ SJ_pois_DA %>%
   as_tibble(rownames = "Variable") %>%
   set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
   gt(rowname_col = "Variable") %>%
-  tab_header("Table S16: Poisson Model Conditional Dominance Statistics") %>%
+  tab_header("Table S13: Poisson Model Conditional Dominance Statistics") %>%
   fmt_number(columns = 2:5, decimals = 4)
 
 SJ_pois_DA %>% 
@@ -816,7 +580,7 @@ SJ_pois_DA %>%
   set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
                                            c("ER", "AS", "SL", "WE")))) %>%
   gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S17: Poisson Model Complete Dominance Designations") %>%
+  tab_header("Table S14: Poisson Model Complete Dominance Designations") %>%
   sub_missing() %>% 
   tab_stubhead("Dominating Variable")
 ```
@@ -896,7 +660,7 @@ OC_nb_param  %>%
   gt(rowname_col = "Parameter") %>%
   fmt_number(columns = 2:6, decimals = 4) %>%
   tab_spanner(columns = c(Low, High), label = "95% Confidence Interval") %>%
-  tab_header("Table S18: Negative Binomial Regression") %>% 
+  tab_header("Table S15: Negative Binomial Regression") %>% 
   tab_source_note(str_c("Theta parameter is ", 
                         OC_nb_reg$theta %>% 
                           format(big.mark = ",", digits = 4), "."))
@@ -916,7 +680,7 @@ map(c("ER", "AS", "SL", "WE"),
         emmeans::emmeans(reformulate(iv), 
                          at = lst) %>%
         as_tibble %>%
-        rename(mgn = iv) %>%
+        rename(mgn = all_of(iv)) %>%
         mutate(var = iv %>% as_factor,
                emmean = exp(emmean))
     }
@@ -926,7 +690,7 @@ map(c("ER", "AS", "SL", "WE"),
   geom_line() + scale_color_viridis_d() + theme_light() + 
   ylab("Predicted Counts") + xlab("Values of Tailoring Characteristic") + 
   labs(color = "Tailoring\nCharacteristic") + 
-  ggtitle("Figure Sk: Marginal Effects of the Overcoat\nProduction Model")
+  ggtitle("Figure Se: Marginal Effects of the Overcoat\nProduction Model")
 ```
 
 ### Dominance Analytic Results
@@ -952,7 +716,7 @@ OC_nb_DA %>%
             by = "Variable") %>%
   set_names(c("Variable", "General Dominance", "Standardized")) %>%
   gt(rowname_col = "Variable") %>%
-  tab_header("Table S19: Negative Binomial Model General Dominance Statistics") %>%
+  tab_header("Table S16: Negative Binomial Model General Dominance Statistics") %>%
   fmt_number(columns = 2:3, decimals = 4) %>%
   tab_source_note(str_c("Overall Deviance R-square is ", 
                         OC_nb_reg %>% r2_kullback(adjust = FALSE) %>% 
@@ -963,7 +727,7 @@ OC_nb_DA %>%
   as_tibble(rownames = "Variable") %>%
   set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
   gt(rowname_col = "Variable") %>%
-  tab_header("Table S20: Negative Binomial Model Conditional Dominance Statistics") %>%
+  tab_header("Table S17: Negative Binomial Model Conditional Dominance Statistics") %>%
   fmt_number(columns = 2:5, decimals = 4)
 
 OC_nb_DA %>% 
@@ -975,434 +739,9 @@ OC_nb_DA %>%
   set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
                                            c("ER", "AS", "SL", "WE")))) %>%
   gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S21: Negative Binomial Model Complete Dominance Designations") %>%
+  tab_header("Table S18: Negative Binomial Model Complete Dominance Designations") %>%
   sub_missing() %>% 
   tab_stubhead("Dominating Variable")
-```
-
-<!-- # ~~~ NB regs don't work with dominance_analysis() - method dispatch issue? -->
-<!-- # ~~~ they have r2() method but DA doesn't recognize it -->
-<!-- # nb_result %>% -->
-<!-- #   dominance_analysis() -->
-
-# Differential Exposure Modeling
-
-This section describes the model estimation and dominance analysis of the differential exposure contaminated $SJ_{RH}$/random differential exposure and the unreported $SJ_{VH}$/correlated differential exposure contaminated DVs.
-
-## Random Differential Exposure 
-
-The sections below estimate models focusing on the $SJ_{RH}$/random differential exposure contaminated DV.
-
-### Without Offset Term
-
-The results below all estimate models that do not adjust for differential exposure with an offset term.
-
-#### Obtain Modeling Results
-
-The code block below estimates the random differential exposure model without an offset term and reports on the results.
-
-```{r SJ_RH-reg-no-exp}
-SJ_RH_reg_wo_off <- 
-  glm(SJ_RH ~ ER + AS + SL + WE, 
-      data = Data_Frame, 
-      family = poisson())
-
-SJ_RH_reg_wo_off_param <- 
-  SJ_RH_reg_wo_off %>% 
-  parameters() 
-
-SJ_RH_reg_wo_off_param %>% 
-  select(-df_error, -CI, -z, -p) %>%
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  rename(Low = "CI_low", High = "CI_high", B = "Coefficient") %>%
-  mutate(`e^B` = exp(B), 
-         Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:6, decimals = 4) %>%
-  tab_spanner(columns = c(Low, High), label = "95% Confidence Interval") %>%
-  tab_header("Table S22: Random Differential Exposure Poisson Model Without Offset Term")
-```
-
-#### Dominance Analysis Results
-
-The code block below implements the random differential exposure model without an offset term and reports on results.
-
-```{r SJ_RH-DA-no-exp}
-SJ_RH_wo_off_DA <-
-  domir(SJ_RH ~ ER + AS + SL + WE, 
-        \(fml, ...) {
-          res <- 
-            glm(fml, ...) 
-          return(r2_kullback(res, adjust = FALSE))
-        },
-        data = Data_Frame, family = poisson())
-
-SJ_RH_wo_off_DA %>% 
-  pluck("General_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  left_join(SJ_RH_wo_off_DA %>% 
-              pluck("Standardized") %>%
-              as_tibble(rownames = "Variable"),
-            by = "Variable") %>%
-  set_names(c("Variable", "General Dominance", "Standardized")) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S23: Random Differential Exposure Without Offset Term General Dominance Statistics") %>%
-  fmt_number(columns = 2:3, decimals = 4) %>%
-  tab_source_note(str_c("Overall Deviance R-square is ", 
-                        SJ_RH_reg_wo_off %>% r2_kullback(adjust = FALSE) %>% 
-                          sprintf("%5.4f", .), "."))
-
-SJ_RH_wo_off_DA %>% 
-  pluck("Conditional_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S24: Random Differential Exposure Without Offset Term  Conditional Dominance Statistics") %>%
-  fmt_number(columns = 2:5, decimals = 4)
-
-SJ_RH_wo_off_DA %>% 
-  pluck("Complete_Dominance") %>%
-  as_tibble(rownames = "Dominating Variable") %>%
-  mutate(
-    `Dominating Variable` = str_remove(`Dominating Variable`, "Dmnates_")
-  ) %>%
-  set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
-                                           c("ER", "AS", "SL", "WE")))) %>%
-  gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S25: Random Differential Exposure Without Offset Term  Complete Dominance Designations") %>%
-  sub_missing() %>% 
-  tab_stubhead("Dominating Variable")
-```
-
-### With Offset Term
-
-The results below all estimate models that adjust for differential exposure with an offset term.
-
-#### Obtain Modeling Results
-
-The code block below estimates the random differential exposure model with an offset term and reports on the results.
-
-```{r SJ_RH-reg-exp}
-SJ_RH_reg_w_off <- 
-  glm(SJ_RH ~ ER + AS + SL + WE + offset(log(RH)), 
-      data = Data_Frame, 
-      family = poisson())
-
-SJ_RH_reg_w_off_param <- 
-  SJ_RH_reg_w_off %>% 
-  parameters() 
-
-SJ_RH_reg_w_off_param %>% 
-  select(-df_error, -CI, -z, -p) %>%
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  rename(Low = "CI_low", High = "CI_high", B = "Coefficient") %>%
-  mutate(`e^B` = exp(B), 
-         Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:6, decimals = 4) %>%
-  tab_spanner(columns = c(Low, High), label = "95% Confidence Interval") %>%
-  tab_header("Table S26: Random Differential Exposure Poisson Model With Offset Term")
-```
-
-#### Dominance Analysis Results
-
-The code block below implements the random differential exposure model with an offset term and reports on results.
-
-```{r SJ_RH-DA-exp}
-SJ_RH_w_off_DA <-
-  domir(SJ_RH ~ ER + AS + SL + WE, 
-        \(fml, ...) {
-          res <- 
-            fml %>%
-            update(. ~ . + offset(log(RH))) %>%
-            glm(...) 
-          return(r2_kullback(res, adjust = FALSE))
-        },
-        data = Data_Frame, family = poisson())
-
-SJ_RH_w_off_DA %>% 
-  pluck("General_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  left_join(SJ_RH_w_off_DA %>% 
-              pluck("Standardized") %>%
-              as_tibble(rownames = "Variable"),
-            by = "Variable") %>%
-  set_names(c("Variable", "General Dominance", "Standardized")) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S27: Random Differential Exposure With Offset Term General Dominance Statistics") %>%
-  fmt_number(columns = 2:3, decimals = 4) %>%
-  tab_source_note(str_c("Overall Deviance R-square is ", 
-                        SJ_RH_reg_w_off %>% r2_kullback(adjust = FALSE) %>% 
-                          sprintf("%5.4f", .), "."))
-
-SJ_RH_w_off_DA %>% 
-  pluck("Conditional_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S28: Random Differential Exposure With Offset Term Conditional Dominance Statistics") %>%
-  fmt_number(columns = 2:5, decimals = 4)
-
-SJ_RH_w_off_DA %>% 
-  pluck("Complete_Dominance") %>%
-  as_tibble(rownames = "Dominating Variable") %>%
-  mutate(
-    `Dominating Variable` = str_remove(`Dominating Variable`, "Dmnates_")
-  ) %>%
-  set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
-                                           c("ER", "AS", "SL", "WE")))) %>%
-  gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S29: Random Differential Exposure With Offset Term Complete Dominance Designations") %>%
-  sub_missing() %>% 
-  tab_stubhead("Dominating Variable")
-```
-
-### Combined Differential Exposure Model Reporting
-
-The code block below implements Table 9 as reported in the manuscript.
-
-```{r SJ_RH-reg-table}
-SJ_RH_reg_wo_off_param %>% 
-  select(Parameter, Coefficient) %>%
-  mutate(`e^B` = exp(Coefficient)) %>%
-  left_join(
-    SJ_RH_wo_off_DA %>% 
-      pluck("General_Dominance") %>% 
-      as_tibble(rownames = "Parameter"),
-    by = "Parameter"
-  ) %>%
-  left_join(
-    SJ_RH_reg_w_off_param %>% 
-      select(Parameter, Coefficient) %>%
-      rename(Coefficient = "Coefficient") %>%
-      mutate(`e^B` = exp(Coefficient)),
-    by = "Parameter") %>%
-  left_join(
-    SJ_RH_w_off_DA %>% 
-      pluck("General_Dominance") %>% 
-      as_tibble(rownames = "Parameter"),
-    by = "Parameter"
-  ) %>% 
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  mutate(Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:7, decimals = 4) %>%
-  tab_header("Table 9: Poisson Modeling Results Under Random Differential Exposure") %>% 
-  tab_spanner(columns = c("Coefficient.x", "e^B.x", "value.x"), label = "Without Offset") %>%
-  tab_spanner(columns = c("Coefficient.y", "e^B.y", "value.y"), label = "With Offset") %>%
-    cols_label("Coefficient.x" ~ "B", "e^B.x" ~ "e^B", "value.x" ~ "C",
-             "Coefficient.y" ~ "B", "e^B.y" ~ "e^B", "value.y" ~ "C") %>%
-  sub_missing(missing_text = "") %T>%
-  print %>%
-  gtsave(filename = "uncorr_exp_coeff.tex", path = "./includes/")
-```
-
-## Correlated Differential Exposure 
-
-The sections below estimate models focusing on the $SJ_{VH}$/correlated differential exposure contaminated DV.
-
-### Without Offset Term
-
-The results below all estimate models that do not adjust for differential exposure with an offset term.
-
-#### Obtain Modeling Results
-
-The code block below estimates the correlated differential exposure model without an offset term and reports on the results.
-
-```{r SJ_VH-reg-no-exp}
-SJ_VH_reg_wo_off <- 
-  glm(SJ_VH ~ ER + AS + SL + WE, 
-      data = Data_Frame, 
-      family = poisson())
-
-SJ_VH_reg_wo_off_param <- 
-  SJ_VH_reg_wo_off %>% 
-  parameters() 
-
-SJ_VH_reg_wo_off_param %>% 
-  select(-df_error, -CI, -z, -p) %>%
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  rename(Low = "CI_low", High = "CI_high", B = "Coefficient") %>%
-  mutate(`e^B` = exp(B), 
-         Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:6, decimals = 4) %>%
-  tab_spanner(columns = c(Low, High), label = "95% Confidence Interval") %>%
-  tab_header("Table S30: Correlated Differential Exposure Poisson Model Without Offset Term")
-```
-
-#### Dominance Analysis Results
-
-The code block below implements the correlated differential exposure model without an offset term and reports on results.
-
-```{r SJ_VH-DA-no-exp}
-SJ_VH_wo_off_DA <-
-  domir(SJ_VH ~ ER + AS + SL + WE, 
-        \(fml, ...) {
-          res <- 
-            glm(fml, ...) 
-          return(r2_kullback(res, adjust = FALSE))
-        },
-        data = Data_Frame, family = poisson())
-
-SJ_VH_wo_off_DA %>% 
-  pluck("General_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  left_join(SJ_VH_wo_off_DA %>% 
-              pluck("Standardized") %>%
-              as_tibble(rownames = "Variable"),
-            by = "Variable") %>%
-  set_names(c("Variable", "General Dominance", "Standardized")) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S31: Correlated Differential Exposure Without Offset Term General Dominance Statistics") %>%
-  fmt_number(columns = 2:3, decimals = 4) %>%
-  tab_source_note(str_c("Overall Deviance R-square is ", 
-                        SJ_VH_reg_wo_off %>% r2_kullback(adjust = FALSE) %>% 
-                          sprintf("%5.4f", .), "."))
-
-SJ_VH_wo_off_DA %>% 
-  pluck("Conditional_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S32: Correlated Differential Exposure Without Offset Term  Conditional Dominance Statistics") %>%
-  fmt_number(columns = 2:5, decimals = 4)
-
-SJ_VH_wo_off_DA %>% 
-  pluck("Complete_Dominance") %>%
-  as_tibble(rownames = "Dominating Variable") %>%
-  mutate(
-    `Dominating Variable` = str_remove(`Dominating Variable`, "Dmnates_")
-  ) %>%
-  set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
-                                           c("ER", "AS", "SL", "WE")))) %>%
-  gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S33: Correlated Differential Exposure Without Offset Term  Complete Dominance Designations") %>%
-  sub_missing() %>% 
-  tab_stubhead("Dominating Variable")
-```
-
-### With Offset Term
-
-The results below all estimate models that adjust for differential exposure with an offset term.
-
-#### Obtain Modeling Results
-
-The code block below estimates the correlated differential exposure model with an offset term and reports on the results.
-
-```{r SJ_VH-reg-exp}
-SJ_VH_reg_w_off <- 
-  glm(SJ_VH ~ ER + AS + SL + WE + offset(log(VH)), 
-      data = Data_Frame, 
-      family = poisson())
-
-SJ_VH_reg_w_off_param <- 
-  SJ_VH_reg_w_off %>% 
-  parameters() 
-
-SJ_VH_reg_w_off_param %>% 
-  select(-df_error, -CI, -z, -p) %>%
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  rename(Low = "CI_low", High = "CI_high", B = "Coefficient") %>%
-  mutate(`e^B` = exp(B), 
-         Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:6, decimals = 4) %>%
-  tab_spanner(columns = c(Low, High), label = "95% Confidence Interval") %>%
-  tab_header("Table S34: Correlated Differential Exposure Poisson Model With Offset Term")
-```
-
-#### Dominance Analysis Results
-
-The code block below implements the correlated differential exposure model with an offset term and reports on results.
-
-```{r SJ_VH-DA-exp}
-SJ_VH_w_off_DA <-
-  domir(SJ_VH ~ ER + AS + SL + WE, 
-        \(fml, ...) {
-          res <- 
-            fml %>%
-            update(. ~ . + offset(log(VH))) %>%
-            glm(...) 
-          return(r2_kullback(res, adjust = FALSE))
-        },
-        data = Data_Frame, family = poisson())
-
-SJ_VH_w_off_DA %>% 
-  pluck("General_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  left_join(SJ_VH_w_off_DA %>% 
-              pluck("Standardized") %>%
-              as_tibble(rownames = "Variable"),
-            by = "Variable") %>%
-  set_names(c("Variable", "General Dominance", "Standardized")) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S35: Correlated Differential Exposure With Offset Term General Dominance Statistics") %>%
-  fmt_number(columns = 2:3, decimals = 4) %>%
-  tab_source_note(str_c("Overall Deviance R-square is ", 
-                        SJ_VH_reg_w_off %>% r2_kullback(adjust = FALSE) %>% 
-                          sprintf("%5.4f", .), "."))
-
-SJ_VH_w_off_DA %>% 
-  pluck("Conditional_Dominance") %>%
-  as_tibble(rownames = "Variable") %>%
-  set_names(c("Variable", str_c("Subset Size: ", 1:4))) %>%
-  gt(rowname_col = "Variable") %>%
-  tab_header("Table S36: Correlated Differential Exposure With Offset Term Conditional Dominance Statistics") %>%
-  fmt_number(columns = 2:5, decimals = 4)
-
-SJ_VH_w_off_DA %>% 
-  pluck("Complete_Dominance") %>%
-  as_tibble(rownames = "Dominating Variable") %>%
-  mutate(
-    `Dominating Variable` = str_remove(`Dominating Variable`, "Dmnates_")
-  ) %>%
-  set_names(c("Dominating Variable", str_c("Dominated Variable: ", 
-                                           c("ER", "AS", "SL", "WE")))) %>%
-  gt(rowname_col = "Dominating Variable") %>%
-  tab_header("Table S37: Correlated Differential Exposure With Offset Term Complete Dominance Designations") %>%
-  sub_missing() %>% 
-  tab_stubhead("Dominating Variable")
-```
-
-### Combined Differential Exposure Model Reporting
-
-The code block below implements Table 10 as reported in the manuscript.
-
-```{r SJ_VH-reg-table}
-SJ_VH_reg_wo_off_param %>% 
-  select(Parameter, Coefficient) %>%
-  mutate(`e^B` = exp(Coefficient)) %>%
-  left_join(
-    SJ_VH_wo_off_DA %>% 
-      pluck("General_Dominance") %>% 
-      as_tibble(rownames = "Parameter"),
-    by = "Parameter"
-  ) %>%
-  left_join(
-    SJ_VH_reg_w_off_param %>% 
-      select(Parameter, Coefficient) %>%
-      rename(Coefficient = "Coefficient") %>%
-      mutate(`e^B` = exp(Coefficient)),
-    by = "Parameter") %>%
-  left_join(
-    SJ_VH_w_off_DA %>% 
-      pluck("General_Dominance") %>% 
-      as_tibble(rownames = "Parameter"),
-    by = "Parameter"
-  ) %>% 
-  {bind_rows(slice_tail(., n = 4), slice_head(., n = 1))} %>%
-  mutate(Parameter = str_replace(Parameter, "\\(Intercept\\)", "Intercept")) %>%
-  gt(rowname_col = "Parameter") %>%
-  fmt_number(columns = 2:7, decimals = 4) %>%
-  tab_header("Table 10: Poisson Modeling Results Under Correlated Differential Exposure") %>% 
-  tab_spanner(columns = c("Coefficient.x", "e^B.x", "value.x"), label = "Without Offset") %>%
-  tab_spanner(columns = c("Coefficient.y", "e^B.y", "value.y"), label = "With Offset") %>%
-    cols_label("Coefficient.x" ~ "B", "e^B.x" ~ "e^B", "value.x" ~ "C",
-             "Coefficient.y" ~ "B", "e^B.y" ~ "e^B", "value.y" ~ "C") %>%
-  sub_missing(missing_text = "") %T>%
-  print %>%
-  gtsave(filename = "corr_exp_coeff.tex", path = "./includes/")
 ```
 
 # Records and Reproducibility
