TQMP submit init

--- a/includes/all_subsets.tex
+++ b/includes/all_subsets.tex
@@ -4,7 +4,7 @@
 } \\ 
 \toprule
  &  \\ 
-\midrule
+\midrule\addlinespace[2.5pt]
 SJ \textasciitilde{} ER & $0.1524$ \\ 
 SJ \textasciitilde{} AS & $0.1131$ \\ 
 SJ \textasciitilde{} SL & $0.0744$ \\ 
