--- a/includes/descrips_initial.tex
+++ b/includes/descrips_initial.tex
@@ -6,7 +6,7 @@
  &  &  & \multicolumn{5}{c}{Correlations} \\ 
 \cmidrule(lr){4-8}
 Variable & Mean & Standard Deviation & ER & AS & SL & WE & SJ \\ 
-\midrule
+\midrule\addlinespace[2.5pt]
 ER & $-0.0355$ & $1.1853$ & $1.0000$ & $0.4168$ & $0.1446$ & $0.2180$ & $0.4175$ \\ 
 AS & $-0.0261$ & $1.4494$ & $0.4168$ & $1.0000$ & $0.1958$ & $0.2850$ & $0.3592$ \\ 
 SL & $-0.0056$ & $1.5480$ & $0.1446$ & $0.1958$ & $1.0000$ & $0.3295$ & $0.2913$ \\ 
