--- a/includes/gen_dom.tex
+++ b/includes/gen_dom.tex
@@ -4,7 +4,7 @@
 } \\ 
 \toprule
 \multicolumn{1}{l}{} &  \\ 
-\midrule
+\midrule\addlinespace[2.5pt]
 ER & $0.0965$ \\ 
 AS & $0.0560$ \\ 
 SL & $0.0399$ \\ 
