--- a/includes/poisson_coeff.tex
+++ b/includes/poisson_coeff.tex
@@ -6,7 +6,7 @@
 \multicolumn{1}{l}{} &  &  & \multicolumn{2}{c}{95\% Confidence Interval} &  \\ 
 \cmidrule(lr){4-5}
 \multicolumn{1}{l}{} & B & \textbackslash{}sigma\_\{B\} & Low & High & e\textasciicircum{}B \\ 
-\midrule
+\midrule\addlinespace[2.5pt]
 ER & $0.2431$ & $0.0114$ & $0.2208$ & $0.2655$ & $1.2753$ \\ 
 AS & $0.1081$ & $0.0095$ & $0.0896$ & $0.1267$ & $1.1142$ \\ 
 SL & $0.0999$ & $0.0083$ & $0.0835$ & $0.1162$ & $1.1050$ \\ 
